--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,20 +46,20 @@ jobs:
     - name: Vet all packages
       run: go vet ./...
 
-# Test have not yet been created for this script.
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
-  #   - name: Set up Go
-  #     uses: actions/setup-go@v3
-  #     # Use go.mod file to setup go version used.
-  #     with:
-  #       go-version-file: ./go.mod
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      # Use go.mod file to setup go version used.
+      with:
+        go-version-file: ./go.mod
 
-  #   - name: Check version
-  #     run: go version
+    - name: Check version
+      run: go version
 
-  #   - name: Run all tests
-  #     run: go test -v ./...
+    - name: Run all tests
+      run: go test -v ./...
+
