--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -61,5 +61,10 @@ jobs:
       run: go version
 
     - name: Run all tests
-      run: go test -v ./...
+      run: |
+        export GOPATH="$HOME/go/"
+        export PATH=$PATH:$GOPATH/bin
+        go install github.com/rakyll/gotest
+        gotest -v ./...
+
 
