Remove nmap from default upstream container.
nmap will not be present any more in the default container that the user
gets with each session.

--- a/DockerImages/entrypoint/Dockerfile
+++ b/DockerImages/entrypoint/Dockerfile
@@ -1,15 +1,17 @@
 FROM ubuntu:latest
 
 # Install required programs.
+# Any programs that the user should be capable of using should be installed in
+# this section.
 RUN apt-get update
 RUN apt-get install bash
 RUN apt-get install -y openssh-server
-RUN apt-get install -y nmap
+# RUN apt-get install -y nmap
 RUN apt-get install -y net-tools
 RUN apt-get install -y iputils-ping         
 RUN apt-get install -y curl
 
-# Create a group and user
+# Create a group and user.
 ARG user=admin
 ARG pass=lbecgyjsnei3mu7yp1hw
 ARG group=admin
@@ -22,18 +24,19 @@ RUN adduser \
     --ingroup $group \
     $user
 
-# Set user password
+# Set user password.
 RUN echo $user':'$pass | chpasswd
 
-# Prepare entrypoint script
+# Prepare entrypoint script.
 COPY entrypoint.sh /tmp/entrypoint.sh
 RUN chmod 500 "/tmp/entrypoint.sh"
 
-# Set working directory
+# Set working directory.
 WORKDIR $home
 
-# Disable cmd history
+# Disable cmd history (the commands executed by the user inside their session
+# will not be stored in a file by bash).
 RUN echo 'set +o history' >> $home/.bashrc
 
-# Launch ssh service and start with bash
+# Launch SSH service and start with bash.
 ENTRYPOINT [ "/bin/bash", "-c", "/tmp/entrypoint.sh" ]
