Fix issue of password getting leaked
This commit changes the behaviour of the entrypoint Docker container, so
that it is not possible anymore to access the 'admin' account with `su
admin` and a password, since no password is then set anymore for the
admin account, i.e. the admin account is inaccessible from within the
account the user gets into the container.

--- a/DockerImages/entrypoint/Dockerfile
+++ b/DockerImages/entrypoint/Dockerfile
@@ -13,7 +13,6 @@ RUN apt-get install -y curl
 
 # Create a group and user.
 ARG user=admin
-ARG pass=lbecgyjsnei3mu7yp1hw
 ARG group=admin
 ARG home=/home/$user
 RUN addgroup $group
@@ -24,11 +23,9 @@ RUN adduser \
     --ingroup $group \
     $user
 
-# Set user password.
-RUN echo $user':'$pass | chpasswd
-
 # Prepare entrypoint script.
 COPY entrypoint.sh /tmp/entrypoint.sh
+# Make entrypoint script executable.
 RUN chmod 500 "/tmp/entrypoint.sh"
 
 # Set working directory.
