Do not create a home directory for admin user

--- a/DockerImages/entrypoint/Dockerfile
+++ b/DockerImages/entrypoint/Dockerfile
@@ -14,26 +14,18 @@ RUN apt-get install -y curl
 # Create a group and user.
 ARG user=admin
 ARG group=admin
-ARG home=/home/$user
 RUN addgroup $group
 RUN adduser \
     --disabled-password \
     --gecos "" \
-    --home $home \
     --ingroup $group \
+	--no-create-home \
     $user
 
 # Prepare entrypoint script.
 COPY entrypoint.sh /tmp/entrypoint.sh
 # Make entrypoint script executable.
 RUN chmod 500 "/tmp/entrypoint.sh"
-
-# Set working directory.
-WORKDIR $home
-
-# Disable cmd history (the commands executed by the user inside their session
-# will not be stored in a file by bash).
-RUN echo 'set +o history' >> $home/.bashrc
 
 # Launch SSH service and start with bash.
 ENTRYPOINT [ "/bin/bash", "-c", "/tmp/entrypoint.sh" ]
